reticula-crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reticula-crud
  labels:
    app: reticula-crud-frontend
    tier: reticula-crud
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
    protocol: TCP
  selector:
    app: reticula-crud-frontend
    tier: reticula-crud
