ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apireticula-crud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.fguerrero.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reticula-crud
            port:
              number: 80
